Changes from nvm.stripped, please move down when landing on mainline:

        Changes

	- Monotone is now compiled against external libraries and does no
          longer ship included variants. This means monotone now requires
          these libraries:

             * botan (1.7.8 or newer)
             * lua5.1
             * sqlite (3.3.8 or newer)
             * pcre (7.6 or newer)

          This reduces maintenance of third-party libraries for monotone
          developers and allows us to concentrate on monotone itself. For
          the user this means faster adoption of improvements in those
          libraries. For example, monotone can now be build against an up
          to date sqlite 3.6.3, botan 1.7.17 and pcre 7.8, whereas we
          shipped with sqlite 3.4.1, botan 1.7.12 and pcre 7.6 before.




??? ??? ?? ??:??:?? UTC 2009

        0.43 release.

        Changes

        - 'mtn help <command_or_group>' or 'mtn <command_or_group> --help' no
          longer print global options, thus making the output of specific help
          requests more compact. You still see all available global options
          by executing 'mtn help' without any arguments.

        Bugs fixed

        - Several bugfixes to `mtn automate stdio':
          * it now correctly distinguishs between syntax and command errors by
            returning error code 1 for the former and error code 2 for the
            latter - just as advertised in the documentation.
          * the stdio event loop no longer quits if a syntax error occurs, but
            rather discards the wrong state and accepts new (valid) commands.
          * option errors haven't been catched properly and thus weren't encoded
            in stdio either; this has been fixed as well.

        - In certain cases, especially also on FreeBSD and Mac OS X, netsync
          called select() even after read() returned 0 bytes to indicate the