@@ -16,7 +16,7 @@ building and installation process for monotone
     - automake.
     - gettext.
     - a supported C++ compiler: g++ 3.2 or later.
-    - boost 1.33.0 or later: either an installed copy or an extracted
+    - boost 1.35.0 or later: either an installed copy or an extracted
       tarball of its unbuilt sources somewhere in the file system are
       supported.
     - zlib 1.1.4 or later.
@@ -31,11 +31,12 @@ building and installation process for monotone
         on debian and ubuntu:
 
            install the following packages:
-             autoconf automake gettext g++ libboost-dev libz-dev
+             autoconf automake gettext g++ libboost1.35-dev libz-dev
              libbotan1.8-dev libsqlite3-dev libpcre3-dev liblua5.1-0-dev
              libidn11-dev texinfo
 
-           (On etch, you may need to use libbotan1.8 from lenny.)
+           (On etch, you may need to use libbotan1.8 and
+           libboost1.35-dev from lenny.)
 
         on freebsd:
 
@@ -50,7 +51,7 @@ building and installation process for monotone
              zlib
 
            (you might need to add the "~x86" flag to dev-libs/botan, so you
-            get at least version 1.6.3, we recommend using at 1.8.0 or newer)
+            get at least version 1.6.3, we recommend using 1.8.0 or newer)
 
         on fedora:
 
@@ -101,7 +102,7 @@ building and installation process for monotone
            automake | 1.9.5   | http://prdownloads.sf.net/mingw/automake-1.9.5-mingwPORT.tar.bz2?download
            zlib     | 1.2.3   | http://prdownloads.sf.net/mingw/zlib-1.2.3-mingwPORT.tar.bz2?download
            gettext  | 0.16.1  | ftp://aeneas.mit.edu/pub/gnu/gettext/gettext-0.16.1.tar.gz
-           boost    | 1.34.1  | http://prdownloads.sf.net/boost/boost_1_34_1.tar.bz2?download
+           boost    | 1.35.0  | http://prdownloads.sf.net/boost/boost_1_35_0.tar.bz2?download
            Lua      | 5.1     | http://www.lua.org/
            pcre     | 7.8     | http://www.pcre.org/
            botan    | 1.8     | http://botan.randombit.net/news/
@@ -196,8 +197,8 @@ building and installation process for monotone
 
            15. boost; only need headers
                $ cd /usr/src
-               $ tar jxf boost_1_34_1.tar.bz2
-               $ cd boost_1_34_1
+               $ tar jxf boost_1_35_1.tar.bz2
+               $ cd boost_1_35_1
                $ cp -a boost /mingw/include
 
            16. Lua
@@ -301,10 +302,10 @@ building and installation process for monotone
     if the command shows a single directory named 'boost', you do not have
     to take any extra steps.  configure will automatically find the
     necessary files.  instead, if the command shows a directory name of the
-    form boost_1_33_1, boost-1.33.1 or similar, you will have to pass that
+    form boost_1_35_1, boost-1.35.1 or similar, you will have to pass that
     to the configure script.  do so as follows:
 
-      ./configure CPPFLAGS="-I/usr/include/boost-1.33.1"
+      ./configure CPPFLAGS="-I/usr/include/boost-1.35.1"
 
     if no directories are shown, look for prebuilt boost packages for your
     system and install them.  if there aren't any, resort to the procedure
@@ -316,7 +317,7 @@ building and installation process for monotone
     your system -- for example, your home directory.  once done, tell the
     configure script where the files are:
 
-      ./configure CPPFLAGS="-I${HOME}/boost-1.33.1"
+      ./configure CPPFLAGS="-I${HOME}/boost-1.35.1"
 
   it is important to note that, once monotone is built, you can get rid of
   all the boost sources or boost development packages from your system.
